# PLCConveX

./: .gitignore  README.md  pyproject.toml
data/Base/: beremiz_base2.xml
data/CODESYS/: LD_BASIC_OPTS.project  PIDControl.project  Rack.project  ST_MUX.project  ST_SEQUENCE_LOGIC.project  interlock.project
data/Inputs/: LD_COMPLEX_1.xml  LD_FB_FULL.xml  LD_Rack_1.xml  PIDControl.xml  ST_BASIC_FULL.xml  TARGET_1FB.xml  TARGET_1ST_GVL.xml  TARGET_5FB.xml  TASK.xml  TYPE_BASIC.xml  VAR_1.xml
data/Inters/: vars.xml
data/Lex/: functions.py  keywords.py
data/Outputs/: plc.xml
libs/rack1/block/: MC_Halt.xml  MC_Home.xml  MC_MoveAbsolute.xml  MC_MoveRelative.xml  MC_MoveVelocity.xml  MC_Power.xml  MC_Reset.xml  MC_Stop.xml
libs/rack1/type/: B_AXIS_REF.xml
src/: clean.py
src/LD/: clean.py  convert.py  do.py  preprocess.py  replace.ipynb  script.ipynb
src/LD/Block/: Block.py  test.py
src/LD/Block/output/: intermediate.xml  original.xml  test.xml
src/LD/Block/play/: modify.txt  origi.txt
src/LD/Inputs/: LD_BASIC_3.xml  LD_BASIC_COIL.xml  LD_BASIC_INO.xml  LD_BASIC_INO2.xml  LD_BASIC_OPTS.xml  LD_RACK_1.xml  LD_VAR_1.xml  T_FB0.xml  T_PLC_PRG.xml  T_func.xml  T_累计TIME.xml  intermediate.xml
src/LD/Inters/: T_FB0_intermediate.xml  T_FB0_preprocess.xml  T_PLC_PRG_intermediate.xml  T_PLC_PRG_preprocess.xml  T_func_intermediate.xml  T_func_preprocess.xml  intermediate.xml  preprocess.xml
src/LD/Locate/: Locate.py  dim.py  test.py
src/LD/Outputs/: LD_BASIC_CONVERTED.xml  LD_CONVERTED.xml  T_FB0_out.xml  T_PLC_PRG_out.xml  T_func_out.xml  dummy.xml
src/LD/Schema/: Elements.py
src/LD/Utils/: counter.py
src/LD/Variables/: token.py
src/Logs/: colorLogger.py
src/ST/: clean.py  do.py  preprocess.py  syntax.py
src/ST/Analyze/: parse.py
src/ST/Inputs/: T_PLC_PRG.xml
src/ST/Outputs/: T_test.xml  test.xml
src/Stage1/: preprocess.py
src/Stage1/examples/: POU.xml
src/Stage3/: assemble.py  do.py  postprocess.py
src/Task/: process.py
src/Task/Inputs/: tasks.xml
src/Type/: Schema.py  process.py
src/Type/Inputs/: types.xml
src/Type/Outputs/: types.xml
