[project]
name = "PLCConveX"
version = "0.1.0"
description = "A project for processing PLC-related XML files"

requires-python = ">=3.8"
dependencies = [
    "pip",
    "lxml",
    "wheel",
    "setuptools",
]

[tool.uv]
managed = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"




[project.optional-dependencies]
dev = ["pytest", "poethepoet"]

[project.scripts]
clean = "clean:main"
stage1 = "Stage1.preprocess:main"
ld-preprocess = "LD.preprocess:main"
ld-block = "LD.Block.test:main"
ld-locate = "LD.Locate.test:main"
ld-clean = "LD.clean:main"
ld = "LD.do:main"
st-syntax = "ST.syntax:main"
st-clean = "ST.clean:main"
st = "ST.do:main"
type = "Type.process:main"
task = "Task.process:main"
stage3 = "Stage3.do:main"
stage3-assemble = "Stage3.assemble:main"


[tool.poe.tasks]
# Define individual steps (optional but can be cleaner)
_run_stage1 = "uv run stage1"
_run_ld = "uv run ld"

[tool.poe.tasks.pipeline]
# Arguments for the 'pipeline' task are defined under the 'args' key within this table
args = { input = { options = ["-i", "--input"], help = "Path to the input file for stage1" } }
# The actual sequence of commands goes under the 'sequence' key
sequence = [
{ cmd = "uv run clean", cwd = "src" },
{ cmd = "uv run stage1 -i ${input}", cwd = "src" }, # Use ${input} to substitute the argument value
{ cmd = "uv run ld", cwd = "src" },
{ cmd = "uv run st", cwd = "src" },
{ cmd = "uv run stage3", cwd = "src" },
]